add command date execution